--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,25 @@
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +59,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.4",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "react-test-renderer": "^17.0.2"
   }
 }
